--- a/lifetracker-ui/src/components/ActivityFeed/ActivityFeed.css
+++ b/lifetracker-ui/src/components/ActivityFeed/ActivityFeed.css
@@ -51,3 +51,101 @@ Button.outline.blue {
     color: #4e81eb;
     border: 1px solid #4e81eb;
 }
+
+.Button.outline.aqua {
+    background: transparent;
+    color: #30e5d1;
+    border: 1px solid #30e5d1;
+}
+
+.activity-feed .main {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 35px;
+    grid-gap: 15px;
+    gap: 15px;
+}
+
+.SummaryStat {
+    position: relative;
+    width: 360px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+}
+
+.SummaryStat.large{
+    height: 220px;
+}
+
+.SummaryStat.gold{
+    background: linear-gradient(64deg,#ffab09, #ffab09);
+}
+.SummaryStat.purple{
+    background: linear-gradient(64deg,#441dfc, #441dfc);
+}
+.SummaryStat.aqua{
+    background: linear-gradient(64deg,#03c5d1, #03c5d1);
+}
+
+.SummaryStat .background{
+    mix-blend-mode: normal;
+    justify-content: space-around;
+    padding: 16px 32px;
+}
+
+.SummaryStat p{
+    color: #fff;
+    font-size: 20px;
+}
+
+.SummaryStat h1{
+    color: #fff;
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.activity-feed h4{
+    font-weight: 700;
+    font-size:30px;
+    color: #fff;
+    margin-top: 35px;
+}
+
+.activity-feed .more {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 35px;
+    grid-gap: 15px;
+    gap: 15px;
+}
+
+.SummaryStat.small .background{
+    height: 110px;
+}
+
+.SummaryStat.teal {
+    background: linear-gradient(64deg,#1000c9,#00c98e);
+}
+
+.SummaryStat.orange {
+    background: linear-gradient(64deg,#8e3232,#c96d00);
+}
+
+.SummaryStat.red {
+    background: linear-gradient(64deg,#c90000,rgba(251,112,144,0.85));
+}
+
+.SummaryStat.small h1{
+    font-size: 24px;
+}
+
+h1{
+    display: block;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
